refactor: 주문메뉴 가격 VO 리팩터링