@@ -10,6 +10,9 @@ import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import java.math.BigDecimal;
 import java.util.*;
 import kitchenpos.eatinorders.domain.*;
+import kitchenpos.eatinorders.ui.request.EatInOrderCreateRequest;
+import kitchenpos.eatinorders.ui.request.EatInOrderLineItemCreateRequest;
+import kitchenpos.eatinorders.ui.response.EatInOrderResponse;
 import kitchenpos.menus.domain.InMemoryMenuRepository;
 import kitchenpos.menus.domain.MenuRepository;
 import kitchenpos.orders.infra.FakeKitchenridersClient;
@@ -37,131 +40,52 @@ class EatInEatInOrderServiceTest {
             eatInOrderTableRepository, kitchenridersClient);
     }
 
-    @DisplayName("1개 이상의 등록된 메뉴로 배달 주문을 등록할 수 있다.")
-    @Test
-    void createDeliveryOrder() {
-        final UUID menuId = menuRepository.save(menu(19_000L)).getId();
-        final EatInOrder expected = createOrderRequest(
-            OrderType.DELIVERY, "서울시 송파구 위례성대로 2", createOrderLineItemRequest(menuId, 19_000L, 3L)
-        );
-        final EatInOrder actual = eatInOrderService.create(expected);
-        assertThat(actual).isNotNull();
-        assertAll(
-            () -> assertThat(actual.getId()).isNotNull(),
-            () -> assertThat(actual.getType()).isEqualTo(expected.getType()),
-            () -> assertThat(actual.getStatus()).isEqualTo(EatInOrderStatus.WAITING),
-            () -> assertThat(actual.getEatInOrderDateTime()).isNotNull(),
-            () -> assertThat(actual.getOrderLineItems()).hasSize(1),
-            () -> assertThat(actual.getDeliveryAddress()).isEqualTo(expected.getDeliveryAddress())
-        );
-    }
-
-    @DisplayName("1개 이상의 등록된 메뉴로 포장 주문을 등록할 수 있다.")
-    @Test
-    void createTakeoutOrder() {
-        final UUID menuId = menuRepository.save(menu(19_000L)).getId();
-        final EatInOrder expected = createOrderRequest(OrderType.TAKEOUT, createOrderLineItemRequest(menuId, 19_000L, 3L));
-        final EatInOrder actual = eatInOrderService.create(expected);
-        assertThat(actual).isNotNull();
-        assertAll(
-            () -> assertThat(actual.getId()).isNotNull(),
-            () -> assertThat(actual.getType()).isEqualTo(expected.getType()),
-            () -> assertThat(actual.getStatus()).isEqualTo(EatInOrderStatus.WAITING),
-            () -> assertThat(actual.getEatInOrderDateTime()).isNotNull(),
-            () -> assertThat(actual.getOrderLineItems()).hasSize(1)
-        );
-    }
-
     @DisplayName("1개 이상의 등록된 메뉴로 매장 주문을 등록할 수 있다.")
     @Test
     void createEatInOrder() {
         final UUID menuId = menuRepository.save(menu(19_000L)).getId();
-        final UUID orderTableId = eatInOrderTableRepository.save(orderTable(true, 4)).getId();
-        final EatInOrder expected = createOrderRequest(OrderType.EAT_IN, orderTableId, createOrderLineItemRequest(menuId, 19_000L, 3L));
-        final EatInOrder actual = eatInOrderService.create(expected);
-        assertThat(actual).isNotNull();
+        final UUID eatInOrderTableId = eatInOrderTableRepository.save(eatInOrderTable(true, 4)).getId();
+        final EatInOrderCreateRequest request = createOrderRequest(eatInOrderTableId, createOrderLineItemRequest(menuId, 19_000L, 3L));
+        final EatInOrderResponse response = eatInOrderService.create(request);
+        assertThat(response).isNotNull();
         assertAll(
-            () -> assertThat(actual.getId()).isNotNull(),
-            () -> assertThat(actual.getType()).isEqualTo(expected.getType()),
-            () -> assertThat(actual.getStatus()).isEqualTo(EatInOrderStatus.WAITING),
-            () -> assertThat(actual.getEatInOrderDateTime()).isNotNull(),
-            () -> assertThat(actual.getOrderLineItems()).hasSize(1),
-            () -> assertThat(actual.getOrderTable().getId()).isEqualTo(expected.getOrderTableId())
+            () -> assertThat(response.getId()).isNotNull(),
+            () -> assertThat(response.getStatus()).isEqualTo(EatInOrderStatus.WAITING),
+            () -> assertThat(response.getEatInOrderDateTime()).isNotNull(),
+            () -> assertThat(response.getEatInOrderLineItems()).hasSize(1),
+            () -> assertThat(response.getEatInOrderTable().getId()).isEqualTo(request.getEatInOrderTableId())
         );
-    }
-
-    @DisplayName("주문 유형이 올바르지 않으면 등록할 수 없다.")
-    @NullSource
-    @ParameterizedTest
-    void create(final OrderType type) {
-        final UUID menuId = menuRepository.save(menu(19_000L)).getId();
-        final EatInOrder expected = createOrderRequest(type, createOrderLineItemRequest(menuId, 19_000L, 3L));
-        assertThatThrownBy(() -> eatInOrderService.create(expected))
-            .isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("메뉴가 없으면 등록할 수 없다.")
-    @MethodSource("orderLineItems")
-    @ParameterizedTest
-    void create(final List<EatInOrderLineItem> eatInOrderLineItems) {
-        final EatInOrder expected = createOrderRequest(OrderType.TAKEOUT, eatInOrderLineItems);
-        assertThatThrownBy(() -> eatInOrderService.create(expected))
+    @Test
+    void create() {
+        final EatInOrderLineItemCreateRequest orderLineItemRequest = createOrderLineItemRequest(INVALID_ID, 19_000L, 1);
+        final UUID eatInOrderTableId = eatInOrderTableRepository.save(eatInOrderTable(true, 4)).getId();
+        final EatInOrderCreateRequest request = createOrderRequest(eatInOrderTableId, orderLineItemRequest);
+        assertThatThrownBy(() -> eatInOrderService.create(request))
             .isInstanceOf(IllegalArgumentException.class);
     }
 
-    private static List<Arguments> orderLineItems() {
-        return Arrays.asList(
-            null,
-            Arguments.of(Collections.emptyList()),
-            Arguments.of(Arrays.asList(createOrderLineItemRequest(INVALID_ID, 19_000L, 3L)))
-        );
-    }
-
-    @DisplayName("매장 주문은 주문 항목의 수량이 0 미만일 수 있다.")
+    @DisplayName("주문 항목의 수량이 0 미만일 수 있다.")
     @ValueSource(longs = -1L)
     @ParameterizedTest
     void createEatInOrder(final long quantity) {
         final UUID menuId = menuRepository.save(menu(19_000L)).getId();
-        final UUID orderTableId = eatInOrderTableRepository.save(orderTable(true, 4)).getId();
-        final EatInOrder expected = createOrderRequest(
-            OrderType.EAT_IN, orderTableId, createOrderLineItemRequest(menuId, 19_000L, quantity)
-        );
-        assertDoesNotThrow(() -> eatInOrderService.create(expected));
-    }
-
-    @DisplayName("매장 주문을 제외한 주문의 경우 주문 항목의 수량은 0 이상이어야 한다.")
-    @ValueSource(longs = -1L)
-    @ParameterizedTest
-    void createWithoutEatInOrder(final long quantity) {
-        final UUID menuId = menuRepository.save(menu(19_000L)).getId();
-        final EatInOrder expected = createOrderRequest(
-            OrderType.TAKEOUT, createOrderLineItemRequest(menuId, 19_000L, quantity)
-        );
-        assertThatThrownBy(() -> eatInOrderService.create(expected))
-            .isInstanceOf(IllegalArgumentException.class);
-    }
-
-    @DisplayName("배달 주소가 올바르지 않으면 배달 주문을 등록할 수 없다.")
-    @NullAndEmptySource
-    @ParameterizedTest
-    void create(final String deliveryAddress) {
-        final UUID menuId = menuRepository.save(menu(19_000L)).getId();
-        final EatInOrder expected = createOrderRequest(
-            OrderType.DELIVERY, deliveryAddress, createOrderLineItemRequest(menuId, 19_000L, 3L)
-        );
-        assertThatThrownBy(() -> eatInOrderService.create(expected))
-            .isInstanceOf(IllegalArgumentException.class);
+        final UUID orderTableId = eatInOrderTableRepository.save(eatInOrderTable(true, 4)).getId();
+        final EatInOrderCreateRequest request = createOrderRequest(orderTableId, createOrderLineItemRequest(menuId, 19_000L, quantity));
+        assertDoesNotThrow(() -> eatInOrderService.create(request));
     }
 
     @DisplayName("빈 테이블에는 매장 주문을 등록할 수 없다.")
     @Test
     void createEmptyTableEatInOrder() {
         final UUID menuId = menuRepository.save(menu(19_000L)).getId();
-        final UUID orderTableId = eatInOrderTableRepository.save(orderTable(false, 0)).getId();
-        final EatInOrder expected = createOrderRequest(
-            OrderType.EAT_IN, orderTableId, createOrderLineItemRequest(menuId, 19_000L, 3L)
+        final UUID orderTableId = eatInOrderTableRepository.save(eatInOrderTable(false, 0)).getId();
+        final EatInOrderCreateRequest request = createOrderRequest(
+            orderTableId, createOrderLineItemRequest(menuId, 19_000L, 3L)
         );
-        assertThatThrownBy(() -> eatInOrderService.create(expected))
+        assertThatThrownBy(() -> eatInOrderService.create(request))
             .isInstanceOf(IllegalStateException.class);
     }
 
@@ -170,8 +94,9 @@ class EatInEatInOrderServiceTest {
     @Test
     void createNotDisplayedMenuOrder() {
         final UUID menuId = menuRepository.save(menu(19_000L)).getId();
-        final EatInOrder expected = createOrderRequest(OrderType.TAKEOUT, createOrderLineItemRequest(menuId, 19_000L, 3L));
-        assertThatThrownBy(() -> eatInOrderService.create(expected))
+        final UUID orderTableId = eatInOrderTableRepository.save(eatInOrderTable(false, 0)).getId();
+        final EatInOrderCreateRequest request = createOrderRequest(orderTableId, createOrderLineItemRequest(menuId, 19_000L, 3L));
+        assertThatThrownBy(() -> eatInOrderService.create(request))
             .isInstanceOf(IllegalStateException.class);
     }
 
@@ -179,15 +104,16 @@ class EatInEatInOrderServiceTest {
     @Test
     void createNotMatchedMenuPriceOrder() {
         final UUID menuId = menuRepository.save(menu(19_000L)).getId();
-        final EatInOrder expected = createOrderRequest(OrderType.TAKEOUT, createOrderLineItemRequest(menuId, 16_000L, 3L));
-        assertThatThrownBy(() -> eatInOrderService.create(expected))
+        final UUID orderTableId = eatInOrderTableRepository.save(eatInOrderTable(false, 0)).getId();
+        final EatInOrderCreateRequest request = createOrderRequest(orderTableId, createOrderLineItemRequest(menuId, 16_000L, 3L));
+        assertThatThrownBy(() -> eatInOrderService.create(request))
             .isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("주문을 접수한다.")
     @Test
     void accept() {
-        final UUID orderId = eatInOrderRepository.save(eatInOrder(EatInOrderStatus.WAITING, orderTable(true, 4))).getId();
+        final UUID orderId = eatInOrderRepository.save(eatInOrder(EatInOrderStatus.WAITING, eatInOrderTable(true, 4))).getId();
         final EatInOrder actual = eatInOrderService.accept(orderId);
         assertThat(actual.getStatus()).isEqualTo(EatInOrderStatus.ACCEPTED);
     }
@@ -196,7 +122,7 @@ class EatInEatInOrderServiceTest {
     @EnumSource(value = EatInOrderStatus.class, names = "WAITING", mode = EnumSource.Mode.EXCLUDE)
     @ParameterizedTest
     void accept(final EatInOrderStatus status) {
-        final UUID orderId = eatInOrderRepository.save(eatInOrder(status, orderTable(true, 4))).getId();
+        final UUID orderId = eatInOrderRepository.save(eatInOrder(status, eatInOrderTable(true, 4))).getId();
         assertThatThrownBy(() -> eatInOrderService.accept(orderId))
             .isInstanceOf(IllegalStateException.class);
     }
@@ -204,7 +130,7 @@ class EatInEatInOrderServiceTest {
     @DisplayName("주문을 서빙한다.")
     @Test
     void serve() {
-        final EatInOrderTable eatInOrderTable = eatInOrderTableRepository.save(orderTable(true, 4));
+        final EatInOrderTable eatInOrderTable = eatInOrderTableRepository.save(eatInOrderTable(true, 4));
         final UUID orderId = eatInOrderRepository.save(eatInOrder(
             EatInOrderStatus.ACCEPTED,
             eatInOrderTable
@@ -217,7 +143,7 @@ class EatInEatInOrderServiceTest {
     @EnumSource(value = EatInOrderStatus.class, names = "ACCEPTED", mode = EnumSource.Mode.EXCLUDE)
     @ParameterizedTest
     void serve(final EatInOrderStatus status) {
-        final EatInOrderTable eatInOrderTable = eatInOrderTableRepository.save(orderTable(true, 4));
+        final EatInOrderTable eatInOrderTable = eatInOrderTableRepository.save(eatInOrderTable(true, 4));
         final UUID orderId = eatInOrderRepository.save(eatInOrder(status, eatInOrderTable)).getId();
         assertThatThrownBy(() -> eatInOrderService.serve(orderId))
             .isInstanceOf(IllegalStateException.class);
@@ -226,9 +152,9 @@ class EatInEatInOrderServiceTest {
     @DisplayName("주문을 완료한다.")
     @Test
     void complete() {
-        final EatInOrderTable eatInOrderTable = eatInOrderTableRepository.save(orderTable(true, 4));
+        final EatInOrderTable eatInOrderTable = eatInOrderTableRepository.save(eatInOrderTable(true, 4));
         final EatInOrder expected = eatInOrderRepository.save(eatInOrder(
-            EatInOrderStatus.DELIVERED,
+            EatInOrderStatus.SERVED,
             eatInOrderTable
         ));
         final EatInOrder actual = eatInOrderService.complete(expected.getId());
@@ -239,7 +165,7 @@ class EatInEatInOrderServiceTest {
     @EnumSource(value = EatInOrderStatus.class, names = "SERVED", mode = EnumSource.Mode.EXCLUDE)
     @ParameterizedTest
     void completeTakeoutAndEatInOrder(final EatInOrderStatus status) {
-        final EatInOrderTable eatInOrderTable = eatInOrderTableRepository.save(orderTable(true, 4));
+        final EatInOrderTable eatInOrderTable = eatInOrderTableRepository.save(eatInOrderTable(true, 4));
         final UUID orderId = eatInOrderRepository.save(eatInOrder(status, eatInOrderTable)).getId();
         assertThatThrownBy(() -> eatInOrderService.complete(orderId))
             .isInstanceOf(IllegalStateException.class);
@@ -248,7 +174,7 @@ class EatInEatInOrderServiceTest {
     @DisplayName("주문 테이블의 모든 매장 주문이 완료되면 빈 테이블로 설정한다.")
     @Test
     void completeEatInOrder() {
-        final EatInOrderTable eatInOrderTable = eatInOrderTableRepository.save(orderTable(true, 4));
+        final EatInOrderTable eatInOrderTable = eatInOrderTableRepository.save(eatInOrderTable(true, 4));
         final EatInOrder expected = eatInOrderRepository.save(eatInOrder(
             EatInOrderStatus.SERVED,
             eatInOrderTable
@@ -264,7 +190,7 @@ class EatInEatInOrderServiceTest {
     @DisplayName("완료되지 않은 매장 주문이 있는 주문 테이블은 빈 테이블로 설정하지 않는다.")
     @Test
     void completeNotTable() {
-        final EatInOrderTable eatInOrderTable = eatInOrderTableRepository.save(orderTable(true, 4));
+        final EatInOrderTable eatInOrderTable = eatInOrderTableRepository.save(eatInOrderTable(true, 4));
         eatInOrderRepository.save(eatInOrder(EatInOrderStatus.ACCEPTED, eatInOrderTable));
         final EatInOrder expected = eatInOrderRepository.save(eatInOrder(
             EatInOrderStatus.SERVED,
@@ -281,54 +207,28 @@ class EatInEatInOrderServiceTest {
     @DisplayName("주문의 목록을 조회할 수 있다.")
     @Test
     void findAll() {
-        final EatInOrderTable eatInOrderTable = eatInOrderTableRepository.save(orderTable(true, 4));
+        final EatInOrderTable eatInOrderTable = eatInOrderTableRepository.save(eatInOrderTable(true, 4));
         eatInOrderRepository.save(eatInOrder(EatInOrderStatus.SERVED, eatInOrderTable));
-        eatInOrderRepository.save(eatInOrder(EatInOrderStatus.DELIVERED, eatInOrderTable));
+        eatInOrderRepository.save(eatInOrder(EatInOrderStatus.COMPLETED, eatInOrderTable));
         final List<EatInOrder> actual = eatInOrderService.findAll();
         assertThat(actual).hasSize(2);
     }
 
-    private EatInOrder createOrderRequest(
-        final OrderType type,
-        final String deliveryAddress,
-        final EatInOrderLineItem... eatInOrderLineItems
+    private EatInOrderCreateRequest createOrderRequest(
+        UUID eatInOrderTableId,
+        EatInOrderLineItemCreateRequest... eatInOrderLineItemCreateRequests
     ) {
-        final EatInOrder eatInOrder = new EatInOrder();
-        eatInOrder.setType(type);
-        eatInOrder.setDeliveryAddress(deliveryAddress);
-        eatInOrder.setOrderLineItems(Arrays.asList(eatInOrderLineItems));
-        return eatInOrder;
+        return createOrderRequest(eatInOrderTableId, List.of(eatInOrderLineItemCreateRequests));
     }
 
-    private EatInOrder createOrderRequest(final OrderType orderType, final EatInOrderLineItem... eatInOrderLineItems) {
-        return createOrderRequest(orderType, Arrays.asList(eatInOrderLineItems));
-    }
-
-    private EatInOrder createOrderRequest(final OrderType orderType, final List<EatInOrderLineItem> eatInOrderLineItems) {
-        final EatInOrder eatInOrder = new EatInOrder();
-        eatInOrder.setType(orderType);
-        eatInOrder.setOrderLineItems(eatInOrderLineItems);
-        return eatInOrder;
-    }
-
-    private EatInOrder createOrderRequest(
-        final OrderType type,
-        final UUID orderTableId,
-        final EatInOrderLineItem... eatInOrderLineItems
+    private EatInOrderCreateRequest createOrderRequest(
+        UUID eatInOrderTableId,
+        List<EatInOrderLineItemCreateRequest> eatInOrderLineItemCreateRequests
     ) {
-        final EatInOrder eatInOrder = new EatInOrder();
-        eatInOrder.setType(type);
-        eatInOrder.setOrderTableId(orderTableId);
-        eatInOrder.setOrderLineItems(Arrays.asList(eatInOrderLineItems));
-        return eatInOrder;
+        return new EatInOrderCreateRequest(eatInOrderTableId, eatInOrderLineItemCreateRequests);
     }
 
-    private static EatInOrderLineItem createOrderLineItemRequest(final UUID menuId, final long price, final long quantity) {
-        final EatInOrderLineItem eatInOrderLineItem = new EatInOrderLineItem();
-        eatInOrderLineItem.setSeq(new Random().nextLong());
-        eatInOrderLineItem.setMenuId(menuId);
-        eatInOrderLineItem.setPrice(BigDecimal.valueOf(price));
-        eatInOrderLineItem.setQuantity(quantity);
-        return eatInOrderLineItem;
+    private static EatInOrderLineItemCreateRequest createOrderLineItemRequest(UUID menuId, long price, long quantity) {
+        return new EatInOrderLineItemCreateRequest(menuId, BigDecimal.valueOf(price), quantity);
     }
 }
